JDK 11 compatible